# Bzo-Compiler

./: .gitignore  Makefile  Plans.txt  README.md  TODO.txt  bzo.cabal  bzo.nanorc  install.sh  techdebt.txt
CodeGenTest/: TODO.txt  codegen.cabal  test.bzir
CodeGenTest/src/: Codegen.hs  HigherOrder.hs  IRFuncModel.hs  IRLexer.hs  IRModel.hs  IRModelAbstract.hs  IRParser.hs  IRTypeModel.hs  IRTypes.hs  Main.hs  NodeOps.hs
backendTest/: Backend.hs
bzo/cfg/: libs.cfg
bzo/libs/std/src/: std.bzo
info/: contributing.txt  plans.txt
libs/base/: funcs.bz  highorder.bz  types.bz
libs/bits/: bitops.bz
libs/math/: mathfuncs.bz
src/: AST.hs  Backend.hs  BackendTypes.hs  Builtins.hs  BzoChecker.hs  BzoConfigParser.hs  BzoEmulator.hs  BzoEmulatorTypes.hs  BzoExprModeller.hs  BzoFileSorter.hs  BzoLexer.hs  BzoParameterParser.hs  BzoParser.hs  BzoParserRules.hs  BzoPatternModeller.hs  BzoPreprocessor.hs  BzoSyntax.hs  BzoTypeBackend.hs  BzoTypeModeller.hs  BzoTypes.hs  Compiler.hs  Core.hs  DefinitionTable.hs  Error.hs  HigherOrder.hs  Makefile  ModelRules.hs  Query.hs  SymbolTable.hs  Tokens.hs  TypeChecker.hs  TypeClass.hs  TypeMapGen.hs  bzo.hs  codegen.hs  compiler.hs  configparser.hs  error.hs  higherorder.hs  lexer.hs  (+13 more)
src/scrap/: BzoTypes.hs  DefinitionTable.hs  ModelRules.hs  Query.hs  TypeClass.hs
tests/: compiler.bzo  exprmodeltest.bzo  letTest.bz  letTest.bzo  literateTest.lbz  tclasstest.bzo  testExpressions.bz  testExpressions.bzo  workfile.bz  workfile.bzo
