name: bzo-compiler
version: 0.4
description:  A Compiler for the Implicitly Parallel Bzo Programming Language
author: Charles Rosenbauer
license: GPL
license-file: LICENSE
cabal-version: >=2.0
build-type: Simple

executable main
    default-language: Haskell2010
    main-is: bzo.hs
    ghc-options: -dynamic -O2 -XBangPatterns
    hs-source-dirs: src
    build-depends:
        base >= 4.7
      , haskeline >= 0.7
      , text >= 1.2
      , containers >= 0.5.7
      , directory >= 1.3
      , filepath >= 1.4
      , llvm-hs >= 4.0.0
      , llvm-hs-pure >= 5.0.0
    other-modules:
        BzoChecker
      , BzoChecker
      , BzoConfigParser
      , BzoFileSorter
      , BzoLexer
      , BzoParameterParser
      , BzoParser
      , BzoParserRules
      , BzoPreprocessor
      , BzoTypes
      , Compiler
      , HigherOrder
      , ModelRules
      , SymbolTable
